<resources>
    <string name="app_name">TradeTrack</string>
    <string name="add_item_activity_label">Add Item</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_sign_out">Sign out</string>
    <string name="edit_item_content_description">Edit Item</string>
    <string name="record_sale_content_description">Record Sale</string>
    <string name="edit_item_name_hint">Item</string>
    <string name="edit_cost_price_hint">Cost Price</string>
    <string name="edit_selling_price_hint">Selling Price</string>
    <string name="edit_quantity_hint">Quantity</string>
    <string name="home">Home</string>
    <string name="sales_record">Sales Record</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="about">About</string>
    <string name="sign_in_message">Welcome %s</string>
    <string name="sign_in_cancelled_message">Sign in cancelled</string>
    <string name="item_id_extra" translatable="false">ITEM_ID_EXTRA</string>
    <string name="item_name_extra" translatable="false">ITEM_NAME_EXTRA</string>
    <string name="item_quantity_extra" translatable="false">ITEM_QUANTITY_EXTRA</string>
    <string name="item_cost_price_extra" translatable="false">ITEM_COST_PRICE_EXTRA</string>
    <string name="item_selling_price_extra" translatable="false">ITEM_SELLING_PRICE_EXTRA</string>
    <string name="error_message">Unable to retrieve items</string>
    <string name="records_error_message">Unable to retrieve records</string>
    <string name="zero_quantity_message">You no longer have this item in your store</string>
    <string name="is_checked_key" translatable="false">IS_CHECKED_PREFERENCE_KEY</string>
    <string name="share_content_description">share profit</string>
    <string name="share_profit">I made %s! as profit today</string>
    <string name="intent_chooser_title">Share with</string>
    <string name="key_stored_profit" translatable="false">KEY_STORED_PROFIT</string>
    <string name="key_saved_push_key" translatable="false">KEY_SAVED_PUSH_KEY</string>
    <string name="home_fragment_tag" translatable="false">HOME_FRAGMENT_TAG</string>
    <string name="view_records_fragment_tag" translatable="false">VIEW_RECORDS_FRAGMENT_TAG</string>
    <string name="item_price_text">Price: %.2f</string>
    <string name="item_quantity_text">Quantity: %s Unit(s)</string>
    <string name="profit_text">Profit: %s</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="add_widget">Add widget</string>
    <string name="no_connection_message">No internet connection. \nPlease connect to the internet and try again</string>
    <string name="app_widget_initial_text">You have no records yet.
        \nOpen the app and make a sell to see your profit for today</string>
</resources>
